# monad-time-effectful

./: CHANGELOG.md  Makefile  README.md  cabal.haskell-ci  cabal.project  effectful-time.cabal  fourmolu.yaml  monad-time-effectful.cabal  time-effectful.cabal
.github/workflows/: ci.yml  fourmolu.yaml  haskell-ci.yml
src/Effectful/: Time.hs
test/: Main.hs
