cabal-version:      3.0
name:               time-effectful
version:            0.0.1.0
homepage:
  https://github.com/haskell-effectful/time-effectful#readme

bug-reports:
  https://github.com/haskell-effectful/time-effectful/issues

author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell-effectful/time-effectful

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind
    -j

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules: Effectful.Time
  build-depends:
    , base            <=4.17
    , effectful-core  >=1.0 && <2.1
    , time

test-suite time-effectful-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
  hs-source-dirs: test
  build-depends:
    , base
    , effectful-core
    , time-effectful
    , tasty
    , tasty-hunit
    , time
